add contact to en i18n

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -2,6 +2,7 @@
     "about": "About",
     "blog": "Blog",
     "certifications": "Certifications",
+    "contact": "Contact",
     "education": "Education",
     "experience": "Experience",
     "skills": "Skills",
