sections now dynamic order

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -2,9 +2,12 @@
     "about": "About",
     "blog": "Blog",
     "certifications": "Certifications",
+    "creations": "Creations",
     "contact": "Contact",
+    "contributions":"Open Source",
     "education": "Education",
     "experience": "Experience",
+    "publications": "Presentations",
     "skills": "Skills",
     "socialization": "Socialization"
 }
