--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -2,8 +2,13 @@
     "about": "À Propos",
     "blog": "Blog",
     "certifications": "Certifications",
+    "creations": "Creations",
+    "contact": "Contact",
+    "contributions":"Open Source",
     "education": "Formation",
     "experience": "Expériences",
+    "publications": "Presentations",
     "skills": "Compétences",
     "socialization": "Réseaux sociaux"
 }
+
